# decent-tools

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  _oasis  _tags  decent.opam  decent.opam.locked  decentmon.native  dune-project  dune-workspace.dev  formulas_bad_example  formulas_traffic_light  run.sh  run_9.sh  setup.data  setup.ml
docker/: .gitignore  Dockerfile  Makefile  alphabets  experiment_1.sh  experiment_2.sh  experiment_3.sh  init.sh
example_benchs/: ._pattern_formulae-native-SIMP.sh  ._random_formulae-native-SIMP.sh  pattern_formulae-native-REAL.sh  pattern_formulae-native-SIMP.sh  random_formulae-native-REAL.sh  random_formulae-native-SIMP.sh
example_benchs/fmsd _benchs/: fmsd1_nbcomp_depth-alpha-a-b-c-d-e-f-g-h.sh  fmsd4_random_pattern-alpha-a-b-c-bernouilli-with_also_only-change.sh  fmsd_table1.sh  fmsd_table2.sh
example_benchs/fmsd benchs/: fmsd2_random_pattern-alpha-a-b-c.sh  fmsd_table3.sh  (+1 more)
lib/: IO.ml  alphabet_parser.ml  alphabetevent.ml  c_enforcement.ml  c_monitoring.ml  common_enforcement.ml  common_monitoring.ml  common_network.ml  common_test.ml  d_enforcement.ml  dune  extString.ml  ltl_generator.ml  ltl_parser.ml  md_monitoring.ml  md_progression.ml  output.ml  settings.ml  stats.ml  std.ml  utils.ml
src/: architecture.ml  c_enforcement.ml  c_progression.ml  common_enforcement.ml  config.ml  d_enforcement.ml  decent.ml  decentmon.ml  dltl.ml  dyn_network.ml  headers.ml  ltl.ml  network.ml  od_monitoring.ml  od_progression.ml  printers.ml  test.ml  test_simple.ml  trace.ml  types.ml  utils.ml
test/: dune
(+55 files in other folders)
